--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,8 +18,16 @@
       {{ site.description | truncatewords:50 | markdownify }}
       {% assign author = site.data.authors.first[1] %}
       {% if author.social %}
+      
+      <br>
+      <div style="text-align: center;">
+        <a href="http://hits.dwyl.com/dino9881.github.io" target="_blank">
+          <img
+            src="http://hits.dwyl.com/dino9881githubio.svg">
+        </a>
+  </div>
 
-      <br/>
+      
       <br/>
       <nav class="sidebar-nav heading" role="navigation">
         {% include nav.html %}
@@ -35,10 +43,7 @@
         <input type="text" name="q" id="tipue_search_input" pattern=".{1,}" title="At least 1 characters" required></div>
       <div style="clear: both;"></div>
     </form>
-    <div style="text-align: center;">
-      <a href="https://hits.seeyoufarm.com">
-        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fdino9881.github.io&count_bg=%23000000&title_bg=%23000000&icon=kaggle.svg&icon_color=%23FFDD00&title=%EB%B0%A9%EB%AC%B8&edge_flat=false"/></a>
-</div>
+   
     
     
         <div class="sidebar-social">
