--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,10 +21,8 @@
       
       <br>
       <div style="text-align: center;">
-        <a href="http://hits.dwyl.com/dino9881.github.io" target="_blank">
-          <img
-            src="http://hits.dwyl.com/dino9881githubio.svg">
-        </a>
+        <a href="https://hits.seeyoufarm.com">
+          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fdino9881.github.io&count_bg=%23000000&title_bg=%23000000&icon=kaggle.svg&icon_color=%23FFDD00&title=%EB%B0%A9%EB%AC%B8&edge_flat=false"/></a>
   </div>
 
       
