--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,9 +4,8 @@
   <script src="https://utteranc.es/client.js"
         repo="dino9881/blog-comments-repo"
         issue-term="pathname"
-        theme="photon-dark"
+        theme="github-light"
         crossorigin="anonymous"
         async>
 </script>
-
 </aside>
