--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -136,6 +136,17 @@ layout: default
 {% endif %}
 
 
+<!-- utterances start -->
+<script src="https://utteranc.es/client.js"
+        repo="dino9881/blog-comments-repo"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
+<!-- utterances end-->
+
+
 {% if site.anchorjs %}
 <!-- async load function -->
 <script>
